[gd_scene load_steps=2 format=3 uid="uid://cwk0gcnvakk2b"]

[ext_resource type="Script" path="res://curve_view.gd" id="1_koxqp"]

[node name="CurveView" type="Node2D"]
script = ExtResource("1_koxqp")

[node name="Backing" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="XMiddleGreyLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(248, 0)
points = PackedVector2Array(0, 0, 0, 1000)
width = 3.0
default_color = Color(0.192197, 0.192197, 0.192197, 1)

[node name="YMiddleGreyLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 745.89)
points = PackedVector2Array(0, 0, 1000, 0)
width = 3.0
default_color = Color(0.192197, 0.192197, 0.192197, 1)

[node name="YUpperLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -11.0
offset_right = -15.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="YLowerLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -108.0
offset_top = 988.0
offset_right = -15.0
offset_bottom = 1011.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="YLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 800.0
offset_right = 558.0
offset_bottom = 834.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.57079
theme_override_font_sizes/font_size = 24
text = "Output (Linear scale)"
horizontal_alignment = 1

[node name="XLowerLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 1009.0
offset_right = 47.0
offset_bottom = 1032.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="XUpperLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 954.0
offset_top = 1009.0
offset_right = 1047.0
offset_bottom = 1032.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "0.0"
horizontal_alignment = 1

[node name="XLable" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 200.0
offset_top = 1003.5
offset_right = 800.0
offset_bottom = 1037.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Input (Linear scale)"
horizontal_alignment = 1

[node name="ReferenceLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1000)
width = 2.0

[node name="ApproxLine" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1000)
width = 2.0
default_color = Color(1, 0.433333, 0, 1)
